--- a/_config.butterfly.yml
+++ b/_config.butterfly.yml
@@ -84,7 +84,7 @@ favicon: /img/favicon.png
 
 # Avatar (頭像)
 avatar:
-  img: https://raw.githubusercontent.com/FE-ng/picGo/main/blog/20210521114613.png
+  img: https://cdn.jsdelivr.net/gh/FE-ng/picGo/blog/20210521114613.png
   effect: false
 
 # Disable all banner image
