--- a/_config.yml
+++ b/_config.yml
@@ -13,9 +13,9 @@ timezone: Asia/Shanghai
 
 # URL
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
-url: http://yoursite.com
+url: https://droplets.vercel.app/
 root: /
-permalink: :year/:month/:day/:title/
+permalink: :hash/
 permalink_defaults:
 # permalink: :category/:post_title:id
 
