feat(containers): 修改基础语言

--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ subtitle: frond-end
 description: 用来记录自己工作学习中的收获
 keywords: 前端, react, vue, 博客
 author: FE-ng
-language: ch-zn
+language: zh-CN
 timezone: Asia/Shanghai
 
 # URL
