feat(containers): 使用同一类名对<武装mac>进行替换

--- a/source/_data/widget.yml
+++ b/source/_data/widget.yml
@@ -1,9 +1,9 @@
-- class_name: test
-  id_name: test
-  name: widget测试内容
-  icon: test
-  order:
-  html: <script type="text/javascript" id="111">document.querySelectorAll('#recent-posts > .recent-post-item .post_cover img.post_bg').forEach(i => i.style.objectFit = 'contain');</script>
+# - class_name: test
+#   id_name: test
+#   name: widget测试内容
+#   icon: test
+#   order:
+#   html: '<style>body{background: red}</style> <script type="text/javascript" id="111">document.querySelectorAll('#recent-posts > .recent-post-item .post_cover img.post_bg').forEach(i => i.style.objectFit = 'contain');</script>'
 
 - class_name: user-map
   id_name: user-map
