feat(config): 开启图片懒加载

--- a/_config.butterfly.yml
+++ b/_config.butterfly.yml
@@ -816,10 +816,10 @@ pangu:
 # Lazyload (圖片懶加載)
 # https://github.com/verlok/vanilla-lazyload
 lazyload:
-  enable: false
+  enable: true
   field: site # site/post
-  placeholder:
-  blur: false
+  placeholder: loading...
+  blur: true
 
 # PWA
 # See https://github.com/JLHwung/hexo-offline
