--- a/_config.butterfly.yml
+++ b/_config.butterfly.yml
@@ -685,7 +685,7 @@ busuanzi:
 # Formal: Month/Day/Year Time or Year/Month/Day Time
 runtimeshow:
   enable: true
-  publish_date:
+  publish_date: 2021/6/6 00:00:00
 
 # Aside widget - Newest Comments
 newest_comments:
