--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
     "build": "hexo generate"
   },
   "dependencies": {
+    "gulp-html-minifier-terser": "^6.0.1",
     "hexo": "^5.3.0",
     "hexo-generator-archive": "^1.0.0",
     "hexo-generator-category": "^1.0.0",
     "hexo-generator-index": "^2.0.0",
     "hexo-generator-tag": "^1.0.0",
+    "hexo-githubcalendar": "^1.2.3",
     "hexo-renderer-ejs": "^1.0.0",
     "hexo-renderer-marked": "^3.3.0",
     "hexo-renderer-pug": "^1.0.0",
@@ -24,10 +26,16 @@
     "hexo-wordcount": "^6.0.1"
   },
   "devDependencies": {
+    "@babel/core": "^7.14.6",
+    "@babel/preset-env": "^7.14.5",
     "@commitlint/cli": "^12.1.1",
     "@commitlint/config-conventional": "^12.1.1",
     "conventional-changelog-cli": "^2.1.1",
     "cz-customizable": "^6.3.0",
+    "gulp-babel": "^8.0.0",
+    "gulp-clean-css": "^4.3.0",
+    "gulp-htmlclean": "^2.7.22",
+    "gulp-uglify": "^3.0.2",
     "husky": "^4.3.8",
     "lint-staged": "^10.5.4",
     "prettier": "^2.3.1",
