--- a/_config.butterfly.yml
+++ b/_config.butterfly.yml
@@ -11,11 +11,12 @@ menu:
   文章: /archives/ || fas fa-archive
   标签: /tags/ || fas fa-tags
   分类: /categories/ || fas fa-folder-open
-  清单||fas fa-list:
-    Music: /music/ || fas fa-music
-    Movie: /movies/ || fas fa-video
+  # about: /about/||fa fa-user-circle-o
+  # 清单||fas fa-list:
+  #   Music: /music/ || fas fa-music
+  #   Movie: /movies/ || fas fa-video
   友情链接: /link/ || fas fa-link
-  # 关于: /about/ || fas fa-heart
+  关于我: /about/ || fas fa-heart
 
 # Hide the child menu items in mobile sidebar
 hide_sidebar_menu_child: false
@@ -80,11 +81,11 @@ katex:
 # --------------------------------------
 
 # Favicon（網站圖標）
-favicon: /img/favicon.png
+favicon: /img/Sunflower.jpeg
 
 # Avatar (頭像)
 avatar:
-  img: https://cdn.jsdelivr.net/gh/FE-ng/picGo/blog/20210521114613.png
+  img: https://cdn.jsdelivr.net/gh/FE-ng/picGo/blog/20210703105700.png
   effect: false
 
 # Disable all banner image
@@ -645,7 +646,7 @@ aside:
       link: https://github.com/FE-ng
   card_announcement:
     enable: true
-    content: This is my Blog
+    content: 学习使我快乐
   card_recent_post:
     enable: true
     limit: 5 # if set 0 will show all
