feat(containers): 增加RSS订阅功能

--- a/_config.butterfly.yml
+++ b/_config.butterfly.yml
@@ -45,7 +45,7 @@ copy:
 social:
   fab fa-github: https://github.com/FE-ng || Github
   fas fa-envelope: mailto:fengliu018@gmail.com || Email
-
+  fa fa-rss: /atom.xml || RSS链接
 # search (搜索)
 # --------------------------------------
 
