feat(components): 修改站点 icon

--- a/_config.butterfly.yml
+++ b/_config.butterfly.yml
@@ -81,7 +81,7 @@ katex:
 # --------------------------------------
 
 # Favicon（網站圖標）
-favicon: /img/Sunflower.jpeg
+favicon: /images/Sunflower.jpeg
 
 # Avatar (頭像)
 avatar:
